# tooloo-engram

./: .gitignore  README.md  __init__.py  live_adapters.py  pyproject.toml  report_generator.py
engram_v2/: __init__.py  adversary.py  arbiter.py  ast_decomposer.py  cognitive_graph.py  compiler_drone.py  constitution.py  delta_sync.py  epigenetic_infusion.py  graph_context.py  graph_healer.py  graph_store.py  jit_context.py  mandate_pipeline.py  persistence.py  pr_materializer.py  schema.py  tribunal_orchestrator.py  verification_engine.py
reports/: camp-20260308__L1-01.md  camp-20260308__L1-02.md  camp-20260308__L1-03.md  camp-20260308__L1-04.md  camp-20260308__L1-05.md  camp-20260308__L2-01.md  camp-20260308__L2-02.md  camp-20260308__L2-03.md  camp-20260308__L3-01.md  camp-20260308__L3-02.md  camp-20260308__L3-03.md  camp-20260308__L4-01.md  camp-20260308__L4-02.md  camp-20260308__L4-03.md  camp-20260308__L5-01.md  camp-20260308__L5-02.md  camp-20260308__L6-01.md  camp-20260308__L6-02.md  camp-20260308__full_camp.json  camp-20260308__full_camp.md  camp-full-ac1d0753__L1-01.md  camp-full-ac1d0753__L1-02.md  camp-full-ac1d0753__L1-03.md  camp-full-ac1d0753__L1-04.md  camp-full-ac1d0753__L1-05.md  camp-full-ac1d0753__L2-01.md  camp-full-ac1d0753__L2-02.md  camp-full-ac1d0753__L2-03.md  camp-full-ac1d0753__L3-01.md  camp-full-ac1d0753__L3-02.md  camp-full-ac1d0753__L3-03.md  camp-full-ac1d0753__full_camp.json  camp-full-ac1d0753__full_camp.md  camp-l2l6-full__L1-01.md  camp-l2l6-full__L1-02.md  camp-l2l6-full__L1-03.md  camp-l2l6-full__L1-04.md  camp-l2l6-full__L1-05.md  camp-l2l6-full__L2-01.md  camp-l2l6-full__L2-02.md  (+13 more)
tests/: conftest.py  test_adversary.py  test_arbiter.py  test_camp_report.py  (+19 more)
(+4 files in other folders)
